

 
If you need to understand more MyCollab advanced configuration settings, please visit the link [http://wiki.mycollab.com/Configuration](http://wiki.mycollab.com/Configuration). You will finish reading and understanding in a matter of minutes.

Last changelog
==============

Version 4.4.0
-----------------------------
**Improvements**

* Add new wiki page in project module
* Allow users can archive project
* Revise milestone list view to allow user can edit, delete milestone
* Revise invite project member that displays user avatar in suggested list
* Display total open bugs, due bugs in bug dashboard.

**Bug Fixes**

* Tooptip use the default system language instead of user defined language
* Component and Version do not show the marker of complete right
* Ambiguous email field search criteria in CRM account search page

Version 4.3.3
-----------------------------
**Improvements**

* Update Japanese localization
* Update mobile module
* Support chart localization
* Support gantt chart localization
* Improve page template
* Upgrade Vaadin version to 7.2.6
* Improve UIs of projet views includes Bug, Task, Version, Component, Milestone
* Allow users delete comments
* Having the new Time Tracking feature

**Bug Fixes**

* Remove border of Create Project button
* Fix assignment table header misses border
* Fix several broken unit tests
* Fix css issues of email template
* Edit project view is not consistent to other views
* Can not display Japanese in several servlets
* Can not display well on Safari browser due to Vaadin profiler

Version 4.3.2
-----------------------------
**Improvements**

* Update Japanese localization
* Upgrade Jasypt library up to 1.9.2
* Upgrade Vaadin to 7.2.5
* Upgrade Spring framework to 4.0.6.RELEASE
* Add the generic search module by using Solr
* Add permission review when user select role
* Simplify servlet error handler

**Bug Fixes**

* Add more tracked fields in version notification email.
* Fixed NPE when browser cookie is disabled.