@@ -45,17 +45,20 @@ Version 4.4.0
 -----------------------------
 **Improvements**
 
-* Add new wiki page in project module
+* Add new page composer in project module
 * Allow users can archive project
 * Revise milestone list view to allow user can edit, delete milestone
 * Revise invite project member that displays user avatar in suggested list
-* Display total open bugs, due bugs in bug dashboard.
+* Display total open bugs, due bugs in bug dashboard
+* Clean user session resources properly
 
 **Bug Fixes**
 
 * Tooptip use the default system language instead of user defined language
 * Component and Version do not show the marker of complete right
 * Ambiguous email field search criteria in CRM account search page
+* Project permissions are cached across projects
+* Show project permissions wrongly in Japanese locale
 
 Version 4.3.3
 -----------------------------
